<resources>
    <string name="app_name">News Now</string>
    <string name="toolbar_top_news">Current News</string>
    <string name="poster_for_news">Poster for news</string>
    <string name="section">section</string>
    <string name="time_ago">time ago</string>
    <string name="poster_title_top_news">Title</string>
    <string name="profile_icon">Profile</string>
    <string name="share_icon">Share</string>
    <string name="favorite_icon">Favorite</string>
    <string name="news_detail_image">news image</string>
    <string name="post_description">Description</string>
    <string name="title_news_detail">Title</string>
    <string name="image_news_details">Image News details</string>
    <string name="topic_item">section item</string>
    <string name="fail_toast">Oops, something wrong!</string>
    <string name="see_more">See more</string>
    <string name="input_keyword">Type here...</string>
    <string name="search">Search</string>
</resources>