<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/inner_layout_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_news_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_for_news"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/author_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/section"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/time_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_news"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/time_ago"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/title_news_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/image_news_poster"
            android:layout_alignEnd="@id/image_news_poster"
            android:layout_alignBottom="@id/image_news_poster"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/archivo_black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>