<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.NewsDetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_news_detail"
        style="@style/ToolbarDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_news_detail"
        app:navigationIcon="@drawable/ic_backspace"
        app:title="Details" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_news_detail">

        <LinearLayout
            android:id="@+id/layout_for_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_image"
                style="@style/BackgroundCardDetailsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_news_detail"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:contentDescription="@string/image_news_details"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/published_news_detail"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:alpha="0.6"
                        android:background="@drawable/rounded_corner_dark"
                        android:fontFamily="@font/cambay"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/time_ago"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="@id/image_news_detail"
                        app:layout_constraintStart_toStartOf="@id/image_news_detail" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/author_news_detail"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_news_detail"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:alpha="0.7"
                        android:fontFamily="@font/cambay"
                        android:text="@string/section"
                        android:textSize="11sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/image_news_detail" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title_news_detail"
                        style="@style/TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/candal"
                        android:gravity="center"
                        android:text="@string/title_news_detail"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/author_news_detail" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/description_news_detail"
                        style="@style/TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:alpha="0.8"
                        android:fontFamily="@font/cambay"
                        android:text="@string/post_description"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_news_detail" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/see_more"
                style="@style/ButtonDetailsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/see_more" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>